# blackjack

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: continuous_integration.yml
blackjack/datasets/: base_dataset.py  dataset_interface.py  generators.py
blackjack/models/: mobilenet.py  model_zoo.py
blackjack/train/: losses.py  metrics.py  optimizers.py  trainer.py
blackjack/train/engine/: losses.py  metrics.py  optimizers.py
blackjack/train/trainers/: default_trainer.py  trainer_interface.py
blackjack/utils/: parsers.py
tests/: conftest.py  test_default_trainer.py
